# Dynamic_Workflow

./: .gitignore  Dockerfile  README.md  Speaker Synopsis and Socials .xlsx  docker-compose.yml  pyproject.toml  requirements.txt  test_system.py
src/workflow_orchestrator/: config.py  main.py
src/workflow_orchestrator/api/routes/: chat.py  credentials.py  executions.py  files.py  services.py  workflows.py
src/workflow_orchestrator/api/schemas/: execution.py  file.py  workflow.py
src/workflow_orchestrator/application/services/: execution_service.py  file_service.py  workflow_service.py
src/workflow_orchestrator/domain/: models.py
src/workflow_orchestrator/domain/credentials/: __init__.py  credential_manager.py
src/workflow_orchestrator/domain/prompts/: __init__.py  prompt_library.py
src/workflow_orchestrator/domain/services/: __init__.py  dependency_resolver.py  error_memory.py  workflow_analyzer.py  workflow_generator.py  workflow_memory.py
src/workflow_orchestrator/infrastructure/agents/: __init__.py  agent_executor.py
src/workflow_orchestrator/infrastructure/database/: mongodb.py
src/workflow_orchestrator/infrastructure/file_processors/: __init__.py  csv_processor.py  excel_processor.py  pdf_processor.py  txt_processor.py
src/workflow_orchestrator/infrastructure/fle_processors/: base.py  csv_processor.py  excel_processor.py  pdf_processor.py
src/workflow_orchestrator/infrastructure/llm/: openai_client.py
src/workflow_orchestrator/infrastructure/mcp/: __init__.py  filesystem_mcp.py  mongodb_mcp.py  slack_mcp.py  websearch_mcp.py
(+23 files in other folders)
