[tool.poetry.dependencies]
python = "^3.11"

# Core
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"  # For file uploads

# LLM & AI
openai = "^1.12.0"
langchain = "^0.1.6"
langchain-openai = "^0.0.5"
langgraph = "^0.0.20"

# Vector Stores
chromadb = "^0.4.22"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.3.0"

# Database
motor = "^3.3.2"
pymongo = "^4.6.1"

# File Processing
pandas = "^2.1.4"
openpyxl = "^3.1.2"  # Excel
pypdf = "^4.0.0"     # PDF
aiofiles = "^23.2.1"

# HTTP
httpx = "^0.26.0"    # For Slack API

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
ruff = "^0.1.11"